<resources>
    <string name="app_name">Ferris Wheel</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_logo">App Logo</string>
    <string name="gender">Gender</string>
    <string name="chatting_with">Chatting with...</string>
    <string name="display_name">Display Name</string>
    <string name="welcome">Welcome</string>
    <string name="account_details">Account Details</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="hi">Hi</string>
    <string name="login_error">Unfortunately there has been an error trying to sign you in</string>
    <string name="signup_error">Unfortunately there has been an error trying to sign you up</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="orientation">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>All</item>
    </string-array>

    <string-array name="names">
        <item>Jacques</item>
        <item>Athena</item>
        <item>Blue</item>
        <item>Alec</item>
        <item>Tyche</item>
        <item>Atrians</item>
    </string-array>
    <string name="account_message">Thank you for choosing to register. Your name and phone number is not required to sign up. However it is recommended that they are filled in ready for future versions of the app and in case your login details need to be recovered. Other users of the app cannot see what you have set here other than the display name.</string>
    <string name="account_return">remember your name and phone number is not currently required, however it is recommended to enter them.</string>
    <string name="please_enter">Please enter</string>
    <string name="your_pass">your password</string>
    <string name="a_pass">a password</string>
    <string name="empty_pass">You need to enter a password to continue.</string>
    <string name="acknowledge">I understand</string>
</resources>
