<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    android:theme="@style/ViewTheme"
    tools:context=".SetupActivity">

    <EditText
        android:id="@+id/sName2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/lname"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/sPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sName"
        app:layout_constraintTop_toBottomOf="@+id/sTitle"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/sLogoView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/app_logo"
        android:cropToPadding="true"
        android:scaleType="fitStart"
        android:src="@drawable/ic_chat_bubble24dp"
        android:tint="@android:color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/sName"
        app:layout_constraintEnd_toStartOf="@+id/sTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/fname"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/sPhone"
        app:layout_constraintEnd_toStartOf="@+id/sName2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sLogoView"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/sPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fui_phone_hint"
        android:inputType="phone"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/sGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sName"
        tools:targetApi="o" />

    <Spinner
        android:id="@+id/sGender"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:entries="@array/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sGText"
        app:layout_constraintTop_toBottomOf="@+id/sPhone" />

    <TextView
        android:id="@+id/sGText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:text="@string/gender"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sPhone" />

    <TextView
        android:id="@+id/sOText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:text="@string/chatting_with"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sOri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sGText" />

    <Spinner
        android:id="@+id/sOri"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:entries="@array/orientation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sOText"
        app:layout_constraintTop_toBottomOf="@+id/sGender" />

    <TextView
        android:id="@+id/sDText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:text="@string/display_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sDis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sOText" />

    <TextView
        android:id="@+id/sTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/account_details"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sLogoView"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sDis"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:entries="@array/names"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sDText"
        app:layout_constraintTop_toBottomOf="@+id/sOri" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sSave"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/fui_button_text_save"
        android:textColor="@android:color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sDText"
        app:rippleColor="@color/colorSecondary"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/sPText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>